# gpt-tinygrad

./: README.md  pyproject.toml
data/babynames/: source.txt
data/tinyshakespeare/: source.txt
gpt-tinygrad/: mlp.py
tests/: test_mlp.py  test_model.py
tinygpt/: model.py
