[project]
name = "gpt-tinygrad"
version = "0.1.0"
description = ""
authors = [
    {name = "Sameer Jathavedan",email = "sameerjvn.tech@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tinygrad (>=0.10.2,<0.11.0)",
    "pytest (>=8.3.5,<9.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
